Added RLA illegal opcode

--- a/src/html/illegal.html
+++ b/src/html/illegal.html
@@ -23,6 +23,7 @@
       <div class="view-all-grid">
         <div><button title="Shift left one bit in memory, then OR accumulator with memory" class="button buttonOPCODE" onclick="cmdASO()">ASO</button></div>
         <div><button title="Shift left one bit in memory, then OR accumulator with memory" class="button buttonOPCODE" onclick="cmdSLO()">SLO</button></div>
+        <div><button title="Rotate one bit left in memory, then AND accumulator with memory" class="button buttonOPCODE" onclick="cmdRLA()">RLA</button></div>
       </div>
       <br>
 
