--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,7 +24,7 @@
       </div>
 
       <div id="sidebar">
-        <button title="View List of All C64 Opcodes" class="button buttonMAIN" onclick="cmdVIEWALL()">View All Opcodes List</button><br>
+        <button title="View List of All C64 Opcodes" class="button buttonMAIN" onclick="cmdVIEWALL()">View All Legal Opcodes</button><br>
         <!-- <button title="View List of All Processor Flags" class="button buttonMAIN" onclick="cmdPFLAGS()">Processor Flags</button><br> -->
         <button title="View List of All Bitwise Instructions" class="button buttonMAIN" onclick="cmdBITWISE()">Bitwise Instructions</button><br>
         <button title="View List of All Branch Instructions" class="button buttonMAIN" onclick="cmdBRANCH()">Branch Instructions</button><br>
@@ -36,7 +36,7 @@
         <button title="View List of All Register Instructions" class="button buttonMAIN" onclick="cmdREGISTER()">Register Instructions</button><br>
         <button title="View List of All Stack Instructions" class="button buttonMAIN" onclick="cmdSTACK()">Stack Instructions</button><br>
         <button title="View List of All Other Instructions" class="button buttonMAIN" onclick="cmdOTHER()">Other Instructions</button><br>
-        <button title="View List of All Illegal Instructions" class="button buttonMAIN" onclick="cmdILLEGAL()">Illegal Instructions</button><br>
+        <button title="View List of All Illegal Instructions" class="button buttonMAIN" onclick="cmdILLEGAL()">View All Illegal Opcodes</button><br>
         <!-- <button title="Open Test Page" class="button buttonMAIN" onclick="cmdTEST()">Open Test Page</button><br> -->
       </div>
       <div class="home-body">
