--- a/src/html/viewall.html
+++ b/src/html/viewall.html
@@ -82,7 +82,7 @@
       </div>
       <br>
 
-      <div><button id="illegal-button" title="View List of All Illegal Instructions" class="button buttonMAIN" onclick="cmdILLEGAL()">View Illegal Instructions</button></div>
+      <div><button id="legal-illegal-button" title="View List of All Illegal Opcodes" class="button buttonMAIN" onclick="cmdILLEGAL()">View All Illegal Opcodes</button></div>
 
       <div id="navigation">
         <h2 id="navigation-text">Navigation:</h2>
