--- a/src/html/aso.html
+++ b/src/html/aso.html
@@ -19,7 +19,7 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>ASO</h1>
-          <h2 style="text-align:center;">Shift left one bit in memory, then OR accumulator with memory</h2>
+          <h2 style="text-align:center;">Shift left one bit in memory then OR accumulator with memory</h2>
           <h2 style="text-align:center;">Sub-instructions: ORA, ASL</h2>
         </div>
       </div>
