--- a/src/html/lse.html
+++ b/src/html/lse.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>SLO</h1>
-          <h2 style="text-align:center;">Shift left one bit in memory then OR accumulator with memory</h2>
-          <h2 style="text-align:center;">Sub-instructions: ORA, ASL</h2>
+          <h1>LSE</h1>
+          <h2 style="text-align:center;">Shift right one bit in memory then EOR accumulator with memory</h2>
+          <h2 style="text-align:center;">Sub-instructions: EOR, LSR</h2>
         </div>
       </div>
 
@@ -45,50 +45,50 @@
           </tr>
           <tr>
             <td>Zero Page</td>
-            <td>SLO $44</td>
-            <td>$07</td>
+            <td>LSE $44</td>
+            <td>$47</td>
             <td>2</td>
             <td>5</td>
           </tr>
           <tr>
             <td>Zero Page,X</td>
-            <td>SLO $44,X</td>
-            <td>$17</td>
+            <td>LSE $44,X</td>
+            <td>$57</td>
             <td>2</td>
             <td>6</td>
           </tr>
           <tr>
             <td>(Indirect,X)</td>
-            <td>SLO ($44,X)</td>
-            <td>$93</td>
+            <td>LSE ($44,X)</td>
+            <td>$43</td>
             <td>2</td>
             <td>8</td>
           </tr>
           <tr>
             <td>(Indirect),Y</td>
-            <td>SLO ($44),Y</td>
-            <td>$13</td>
+            <td>LSE ($44),Y</td>
+            <td>$53</td>
             <td>2</td>
             <td>8</td>
           </tr>
           <tr>
             <td>Absolute</td>
-            <td>SLO $4400</td>
-            <td>$0F</td>
+            <td>LSE $4400</td>
+            <td>$4F</td>
             <td>3</td>
             <td>6</td>
           </tr>
           <tr>
             <td>Absolute,X</td>
-            <td>SLO $4400,X</td>
-            <td>$1F</td>
+            <td>LSE $4400,X</td>
+            <td>$5F</td>
             <td>3</td>
             <td>7</td>
           </tr>
           <tr>
             <td>Absolute,Y</td>
-            <td>SLO $4400,Y</td>
-            <td>$1B</td>
+            <td>LSE $4400,Y</td>
+            <td>$5B</td>
             <td>3</td>
             <td>7</td>
           </tr>
@@ -128,7 +128,7 @@
 
         <div class="codeblock">
           <pre>
-      <span style="color: #eeeb42; font-weight: bold">slo</span><span style="color: #87daf3"> $C010</span><span style="color: #83f383;">         // 0F 10 C0</span>
+      <span style="color: #eeeb42; font-weight: bold">lse</span><span style="color: #87daf3"> $C100,X</span><span style="color: #83f383;">         // 5F 00 C1</span>
           </pre>
         </div>
 
@@ -138,8 +138,8 @@
 
         <div class="codeblock">
           <pre>
-      <span style="color: #eeeb42; font-weight: bold">asl</span><span style="color: #87daf3"> $C010</span></span>
-      <span style="color: #eeeb42; font-weight: bold">ora</span><span style="color: #87daf3"> $C010</span></span>
+      <span style="color: #eeeb42; font-weight: bold">lsr</span><span style="color: #87daf3"> $C100,X</span></span>
+      <span style="color: #eeeb42; font-weight: bold">eor</span><span style="color: #87daf3"> $C100,X</span></span>
           </pre>
         </div>
 
