Added AXS-SAX-AAX illegal opcodes

--- a/src/html/illegal.html
+++ b/src/html/illegal.html
@@ -26,6 +26,10 @@
         <div><button title="Rotate one bit left in memory, then AND accumulator with memory" class="button buttonOPCODE" onclick="cmdRLA()">RLA</button></div>
         <div><button title="Shift right one bit in memory then EOR accumulator with memory" class="button buttonOPCODE" onclick="cmdLSE()">LSE</button></div>
         <div><button title="Shift right one bit in memory then EOR accumulator with memory" class="button buttonOPCODE" onclick="cmdSRE()">SRE</button></div>
+        <div><button title="Rotate one bit right in memory then add memory to accumulator with carry" class="button buttonOPCODE" onclick="cmdRRA()">RRA</button></div>
+        <div><button title="AND the contents of the A and X registers" class="button buttonOPCODE" onclick="cmdAXS()">AXS</button></div>
+        <div><button title="AND the contents of the A and X registers" class="button buttonOPCODE" onclick="cmdSAX()">SAX</button></div>
+        <div><button title="AND the contents of the A and X registers" class="button buttonOPCODE" onclick="cmdAAX()">AAX</button></div>
       </div>
       <br>
 
