Added LAX illegal opcode

--- a/src/html/illegal.html
+++ b/src/html/illegal.html
@@ -30,6 +30,7 @@
         <div><button title="AND the contents of the A and X registers" class="button buttonOPCODE" onclick="cmdAXS()">AXS</button></div>
         <div><button title="AND the contents of the A and X registers" class="button buttonOPCODE" onclick="cmdSAX()">SAX</button></div>
         <div><button title="AND the contents of the A and X registers" class="button buttonOPCODE" onclick="cmdAAX()">AAX</button></div>
+        <div><button title="Load the accumulator and the X register with contents of a memory location" class="button buttonOPCODE" onclick="cmdLAX()">LAX</button></div>
       </div>
       <br>
 
