Added DCM DCP INS ISB ISC illegal opcodes

--- a/src/html/illegal.html
+++ b/src/html/illegal.html
@@ -31,6 +31,11 @@
         <div><button title="AND the contents of the A and X registers" class="button buttonOPCODE" onclick="cmdSAX()">SAX</button></div>
         <div><button title="AND the contents of the A and X registers" class="button buttonOPCODE" onclick="cmdAAX()">AAX</button></div>
         <div><button title="Load the accumulator and the X register with contents of a memory location" class="button buttonOPCODE" onclick="cmdLAX()">LAX</button></div>
+        <div><button title="DECs a memory location then CMPs the result with the Accumulator" class="button buttonOPCODE" onclick="cmdDCM()">DCM</button></div>
+        <div><button title="DECs a memory location then CMPs the result with the Accumulator" class="button buttonOPCODE" onclick="cmdDCP()">DCP</button></div>
+        <div><button title="Increase memory by one then subtract memory from accumulator (with borrow)" class="button buttonOPCODE" onclick="cmdISC()">ISC</button></div>
+        <div><button title="Increase memory by one then subtract memory from accumulator (with borrow)" class="button buttonOPCODE" onclick="cmdISB()">ISB</button></div>
+        <div><button title="Increase memory by one then subtract memory from accumulator (with borrow)" class="button buttonOPCODE" onclick="cmdINS()">INS</button></div>
       </div>
       <br>
 
