--- a/src/html/sre.html
+++ b/src/html/sre.html
@@ -18,7 +18,7 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>SRE</h1>
+          <h1>SRE (LSE)</h1>
           <h2 style="text-align:center;">Shift right one bit in memory then EOR accumulator with memory</h2>
           <h2 style="text-align:center;">Sub-instructions: EOR, LSR</h2>
         </div>
