--- a/src/html/aax.html
+++ b/src/html/aax.html
@@ -18,7 +18,7 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>AAX</h1>
+          <h1>AAX (SAX AXS)</h1>
           <h2 style="text-align:center;">AND the contents of the A and X registers</h2>
           <h2 style="text-align:center;">Sub-instructions: STA, STX</h2>
         </div>
