--- a/src/html/dcm.html
+++ b/src/html/dcm.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>SLO (ASO)</h1>
-          <h2 style="text-align:center;">Shift left one bit in memory then OR accumulator with memory</h2>
-          <h2 style="text-align:center;">Sub-instructions: ORA, ASL</h2>
+          <h1>DCM (DCP)</h1>
+          <h2 style="text-align:center;">DECs a memory location then CMPs the result with the Accumulator</h2>
+          <h2 style="text-align:center;">Sub-instructions: CMP, DEC</h2>
         </div>
       </div>
 
@@ -45,50 +45,50 @@
           </tr>
           <tr>
             <td>Zero Page</td>
-            <td>SLO $44</td>
-            <td>$07</td>
+            <td>DCM $44</td>
+            <td>$C7</td>
             <td>2</td>
             <td>5</td>
           </tr>
           <tr>
             <td>Zero Page,X</td>
-            <td>SLO $44,X</td>
-            <td>$17</td>
+            <td>DCM $44,X</td>
+            <td>$D7</td>
             <td>2</td>
             <td>6</td>
           </tr>
           <tr>
             <td>(Indirect,X)</td>
-            <td>SLO ($44,X)</td>
-            <td>$93</td>
+            <td>DCM ($44,X)</td>
+            <td>$C3</td>
             <td>2</td>
             <td>8</td>
           </tr>
           <tr>
             <td>(Indirect),Y</td>
-            <td>SLO ($44),Y</td>
-            <td>$13</td>
+            <td>DCM ($44),Y</td>
+            <td>$D3</td>
             <td>2</td>
             <td>8</td>
           </tr>
           <tr>
             <td>Absolute</td>
-            <td>SLO $4400</td>
-            <td>$0F</td>
+            <td>DCM $4400</td>
+            <td>$CF</td>
             <td>3</td>
             <td>6</td>
           </tr>
           <tr>
             <td>Absolute,X</td>
-            <td>SLO $4400,X</td>
-            <td>$1F</td>
+            <td>DCM $4400,X</td>
+            <td>$DF</td>
             <td>3</td>
             <td>7</td>
           </tr>
           <tr>
             <td>Absolute,Y</td>
-            <td>SLO $4400,Y</td>
-            <td>$1B</td>
+            <td>DCM $4400,Y</td>
+            <td>$DB</td>
             <td>3</td>
             <td>7</td>
           </tr>
@@ -128,7 +128,7 @@
 
         <div class="codeblock">
           <pre>
-      <span style="color: #eeeb42; font-weight: bold">slo</span><span style="color: #87daf3"> $C010</span><span style="color: #83f383;">         // 0F 10 C0</span>
+      <span style="color: #eeeb42; font-weight: bold">dcm</span><span style="color: #87daf3"> $FF</span><span style="color: #83f383;">         // C7 FF</span>
           </pre>
         </div>
 
@@ -138,8 +138,8 @@
 
         <div class="codeblock">
           <pre>
-      <span style="color: #eeeb42; font-weight: bold">asl</span><span style="color: #87daf3"> $C010</span></span>
-      <span style="color: #eeeb42; font-weight: bold">ora</span><span style="color: #87daf3"> $C010</span></span>
+      <span style="color: #eeeb42; font-weight: bold">dec</span><span style="color: #87daf3"> $FF</span></span>
+      <span style="color: #eeeb42; font-weight: bold">cmp</span><span style="color: #87daf3"> $FF</span></span>
           </pre>
         </div>
 
