--- a/src/html/ins.html
+++ b/src/html/ins.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>SLO (ASO)</h1>
-          <h2 style="text-align:center;">Shift left one bit in memory then OR accumulator with memory</h2>
-          <h2 style="text-align:center;">Sub-instructions: ORA, ASL</h2>
+          <h1>INS (ISC ISB)</h1>
+          <h2 style="text-align:center;">INC memory then subtract memory from accumulator (with borrow)</h2>
+          <h2 style="text-align:center;">(Sub-instructions: SBC, INC)</h2>
         </div>
       </div>
 
@@ -45,50 +45,50 @@
           </tr>
           <tr>
             <td>Zero Page</td>
-            <td>SLO $44</td>
-            <td>$07</td>
+            <td>INS $44</td>
+            <td>$E7</td>
             <td>2</td>
             <td>5</td>
           </tr>
           <tr>
             <td>Zero Page,X</td>
-            <td>SLO $44,X</td>
-            <td>$17</td>
+            <td>INS $44,X</td>
+            <td>$F7</td>
             <td>2</td>
             <td>6</td>
           </tr>
           <tr>
             <td>(Indirect,X)</td>
-            <td>SLO ($44,X)</td>
-            <td>$93</td>
+            <td>INS ($44,X)</td>
+            <td>$E3</td>
             <td>2</td>
             <td>8</td>
           </tr>
           <tr>
             <td>(Indirect),Y</td>
-            <td>SLO ($44),Y</td>
-            <td>$13</td>
+            <td>INS ($44),Y</td>
+            <td>$F3</td>
             <td>2</td>
             <td>8</td>
           </tr>
           <tr>
             <td>Absolute</td>
-            <td>SLO $4400</td>
-            <td>$0F</td>
+            <td>INS $4400</td>
+            <td>$EF</td>
             <td>3</td>
             <td>6</td>
           </tr>
           <tr>
             <td>Absolute,X</td>
-            <td>SLO $4400,X</td>
-            <td>$1F</td>
+            <td>INS $4400,X</td>
+            <td>$FF</td>
             <td>3</td>
             <td>7</td>
           </tr>
           <tr>
             <td>Absolute,Y</td>
-            <td>SLO $4400,Y</td>
-            <td>$1B</td>
+            <td>INS $4400,Y</td>
+            <td>$FB</td>
             <td>3</td>
             <td>7</td>
           </tr>
@@ -107,7 +107,7 @@
                 </tr>
                 <tr>
                   <td>&#10003;</td>
-                  <td>&nbsp;</td>
+                  <td>&#10003;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
@@ -128,7 +128,7 @@
 
         <div class="codeblock">
           <pre>
-      <span style="color: #eeeb42; font-weight: bold">slo</span><span style="color: #87daf3"> $C010</span><span style="color: #83f383;">         // 0F 10 C0</span>
+      <span style="color: #eeeb42; font-weight: bold">ins</span><span style="color: #87daf3"> $FF</span><span style="color: #83f383;">         // E7 FF</span>
           </pre>
         </div>
 
@@ -138,8 +138,8 @@
 
         <div class="codeblock">
           <pre>
-      <span style="color: #eeeb42; font-weight: bold">asl</span><span style="color: #87daf3"> $C010</span></span>
-      <span style="color: #eeeb42; font-weight: bold">ora</span><span style="color: #87daf3"> $C010</span></span>
+      <span style="color: #eeeb42; font-weight: bold">inc</span><span style="color: #87daf3"> $FF</span></span>
+      <span style="color: #eeeb42; font-weight: bold">sbc</span><span style="color: #87daf3"> $FF</span></span>
           </pre>
         </div>
 
