Added ANC ANC2 illegal opcodes

--- a/src/html/illegal.html
+++ b/src/html/illegal.html
@@ -36,6 +36,8 @@
         <div><button title="Increase memory by one then subtract memory from accumulator (with borrow)" class="button buttonOPCODE" onclick="cmdISC()">ISC</button></div>
         <div><button title="Increase memory by one then subtract memory from accumulator (with borrow)" class="button buttonOPCODE" onclick="cmdISB()">ISB</button></div>
         <div><button title="Increase memory by one then subtract memory from accumulator (with borrow)" class="button buttonOPCODE" onclick="cmdINS()">INS</button></div>
+        <div><button title="ANDs the contents of the A register with an immediate value" class="button buttonOPCODE" onclick="cmdANC()">ANC</button></div>
+        <div><button title="ANDs the contents of the A register with an immediate value" class="button buttonOPCODE" onclick="cmdANC2()">ANC2</button></div>
       </div>
       <br>
 
