--- a/src/html/rla.html
+++ b/src/html/rla.html
@@ -123,25 +123,32 @@
 
       <div class="opcode-text">
         <p>
-          Here is an example of how you might use this opcode:
+          RLA ROLs the contents of a memory location and then ANDs the result with the accumulator.
         </p>
-
-        <div class="codeblock">
-          <pre>
-      <span style="color: #eeeb42; font-weight: bold">rla</span><span style="color: #87daf3"> $FC</span><span style="color: #83f383;">         // 37 FC</span>
-          </pre>
-        </div>
 
         <p>
+          Here is an example of how you might use this opcode:
+        </p>
+      </div>
+
+      <div class="codeblock">
+        <pre>
+    <span style="color: #eeeb42; font-weight: bold">rla</span><span style="color: #87daf3"> $FC</span><span style="color: #83f383;">         // 37 FC</span>
+        </pre>
+      </div>
+
+      <div class="opcode-text">
+          <p>
           Here is the same code using equivalent instructions.
         </p>
+      </div>
 
-        <div class="codeblock">
-          <pre>
-      <span style="color: #eeeb42; font-weight: bold">rol</span><span style="color: #87daf3"> $FC,x</span></span>
-      <span style="color: #eeeb42; font-weight: bold">and</span><span style="color: #87daf3"> $FC,x</span></span>
-          </pre>
-        </div>
+      <div class="codeblock">
+        <pre>
+    <span style="color: #eeeb42; font-weight: bold">rol</span><span style="color: #87daf3"> $FC,x</span></span>
+    <span style="color: #eeeb42; font-weight: bold">and</span><span style="color: #87daf3"> $FC,x</span></span>
+        </pre>
+      </div>
 
       <div id="navigation">
         <h2>Navigation:</h2>
