--- a/src/html/anc2.html
+++ b/src/html/anc2.html
@@ -18,7 +18,7 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>ANC2 (ANC)</h1>
+          <h1>ANC2</h1>
           <h2 style="text-align:center;">ANDs the contents of the A register with an immediate value</h2>
           <h2 style="text-align:center;">(Sub-instructions: AND, ROL)</h2>
         </div>
@@ -44,13 +44,6 @@
             </th>
           </tr>
           <tr>
-          <tr>
-            <td>Immediate</td>
-            <td>ANC2 #$44</td>
-            <td>$0B</td>
-            <td>2</td>
-            <td>2</td>
-          </tr>
           <tr>
             <td>Immediate</td>
             <td>ANC2 #$44</td>
@@ -89,18 +82,19 @@
 
       <div class="opcode-text">
         <p>
+          ANDs the contents of the A register with an immediate value and then moves bit 7 of A into the Carry flag. This opcode works basically identically to AND #imm. except that the Carry flag is set to the same state that the Negative flag is set to. (bit 7 is put into the carry, as if the ASL/ROL would have been executed)
+        </p>
+
+        <p>
           Here is an example of how you might use this opcode:
         </p>
+      </div>
 
         <div class="codeblock">
           <pre>
-            <span style="color: #eeeb42; font-weight: bold">anc2</span><span style="color: salmon;"> #</span><span style="color: #87daf3">$AB</span><span style="color: #83f383;">         // No. Cycles= 2</span>
+    <span style="color: #eeeb42; font-weight: bold">anc2</span><span style="color: salmon;"> #</span><span style="color: #87daf3">$AB</span><span style="color: #83f383;">         // No. Cycles= 2</span>
           </pre>
         </div>
-
-        <p>
-          ANDs the contents of the A register with an immediate value and then moves bit 7 of A into the Carry flag. This opcode works basically identically to AND #imm. except that the Carry flag is set to the same state that the Negative flag is set to. (bit 7 is put into the carry, as if the ASL/ROL would have been executed).
-        </p>
 
       <div id="navigation">
         <h2>Navigation:</h2>
