--- a/src/html/ane.html
+++ b/src/html/ane.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>ASO (SLO)</h1>
-          <h2 style="text-align:center;">Shift left one bit in memory then OR accumulator with memory</h2>
-          <h2 style="text-align:center;">Sub-instructions: ORA, ASL</h2>
+          <h1>ANE - XAA</h1>
+          <h2 style="text-align:center;">AND X + AND operand</h2>
+          <h2 style="text-align:center;">Is chip- and/or temperature dependent</h2>
         </div>
       </div>
 
@@ -44,53 +44,12 @@
             </th>
           </tr>
           <tr>
-            <td>Zero Page</td>
-            <td>ASO $44</td>
-            <td>$07</td>
+          <tr>
+            <td>Immediate</td>
+            <td>ANE #$AB</td>
+            <td>$8B</td>
             <td>2</td>
-            <td>5</td>
-          </tr>
-          <tr>
-            <td>Zero Page,X</td>
-            <td>ASO $44,X</td>
-            <td>$17</td>
             <td>2</td>
-            <td>6</td>
-          </tr>
-          <tr>
-            <td>(Indirect,X)</td>
-            <td>ASO ($44,X)</td>
-            <td>$93</td>
-            <td>2</td>
-            <td>8</td>
-          </tr>
-          <tr>
-            <td>(Indirect),Y</td>
-            <td>ASO ($44),Y</td>
-            <td>$13</td>
-            <td>2</td>
-            <td>8</td>
-          </tr>
-          <tr>
-            <td>Absolute</td>
-            <td>ASO $4400</td>
-            <td>$0F</td>
-            <td>3</td>
-            <td>6</td>
-          </tr>
-          <tr>
-            <td>Absolute,X</td>
-            <td>ASO $4400,X</td>
-            <td>$1F</td>
-            <td>3</td>
-            <td>7</td>
-          </tr>
-          <tr>
-            <td>Absolute,Y</td>
-            <td>ASO $4400,Y</td>
-            <td>$1B</td>
-            <td>3</td>
-            <td>7</td>
           </tr>
           <tr>
             <th colspan=5>
@@ -113,7 +72,7 @@
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
                   <td>&#10003;</td>
-                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
                 </tr>
               </table>
             </th>
@@ -123,23 +82,22 @@
 
       <div class="opcode-text">
         <p>
-          Here is an example of how you might use this opcode:
+          A base value in A is determined based on the contets of A and a constant, which may be typically $00, $ff, $ee, etc. The value of this constant depends on temerature, the chip series, and maybe other factors, as well.
         </p>
-
-        <div class="codeblock">
-          <pre>
-      <span style="color: #eeeb42; font-weight: bold">aso</span><span style="color: #87daf3"> $C010</span><span style="color: #83f383;">         // 0F 10 C0</span>
-          </pre>
-        </div>
 
         <p>
-          Here is the same code using equivalent instructions.
+          In order to eliminate these uncertaincies from the equation, use either 0 as the operand or a value of $FF in the accumulator.
         </p>
+
+        <p>
+          Here is an example of how you might use this opcode:
+        </p>
+      </div>
 
         <div class="codeblock">
           <pre>
-      <span style="color: #eeeb42; font-weight: bold">asl</span><span style="color: #87daf3"> $C010</span></span>
-      <span style="color: #eeeb42; font-weight: bold">ora</span><span style="color: #87daf3"> $C010</span></span>
+    <span style="color: #eeeb42; font-weight: bold">ane</span><span style="color: salmon;"> #</span><span style="color: #87daf3">$44</span><span style="color: #83f383;">         // 8B 44 or</span>
+    <span style="color: #eeeb42; font-weight: bold">xaa</span><span style="color: salmon;"> #</span><span style="color: #87daf3">$44</span><span style="color: #83f383;">         // 8B 44</span>
           </pre>
         </div>
 
