--- a/src/html/arr.html
+++ b/src/html/arr.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>INS (ISC ISB)</h1>
-          <h2 style="text-align:center;">INC memory then subtract memory from accumulator (with borrow)</h2>
-          <h2 style="text-align:center;">(Sub-instructions: SBC, INC)</h2>
+          <h1>ARR</h1>
+          <h2 style="text-align:center;">ANDs the A register with an immediate value then RORs the result</h2>
+          <h2 style="text-align:center;">(Sub-instructions: AND, ROR)</h2>
         </div>
       </div>
 
@@ -44,53 +44,12 @@
             </th>
           </tr>
           <tr>
-            <td>Zero Page</td>
-            <td>INS $44</td>
-            <td>$E7</td>
+          <tr>
+            <td>Immediate</td>
+            <td>ARR #$AB</td>
+            <td>$6B</td>
             <td>2</td>
-            <td>5</td>
-          </tr>
-          <tr>
-            <td>Zero Page,X</td>
-            <td>INS $44,X</td>
-            <td>$F7</td>
             <td>2</td>
-            <td>6</td>
-          </tr>
-          <tr>
-            <td>(Indirect,X)</td>
-            <td>INS ($44,X)</td>
-            <td>$E3</td>
-            <td>2</td>
-            <td>8</td>
-          </tr>
-          <tr>
-            <td>(Indirect),Y</td>
-            <td>INS ($44),Y</td>
-            <td>$F3</td>
-            <td>2</td>
-            <td>8</td>
-          </tr>
-          <tr>
-            <td>Absolute</td>
-            <td>INS $4400</td>
-            <td>$EF</td>
-            <td>3</td>
-            <td>6</td>
-          </tr>
-          <tr>
-            <td>Absolute,X</td>
-            <td>INS $4400,X</td>
-            <td>$FF</td>
-            <td>3</td>
-            <td>7</td>
-          </tr>
-          <tr>
-            <td>Absolute,Y</td>
-            <td>INS $4400,Y</td>
-            <td>$FB</td>
-            <td>3</td>
-            <td>7</td>
           </tr>
           <tr>
             <th colspan=5>
@@ -123,23 +82,54 @@
 
       <div class="opcode-text">
         <p>
-          Here is an example of how you might use this opcode:
+          ARR ANDs the accumulator with an immediate value and then rotates the content right. The resulting carry is however not influenced by the LSB as expected from a normal rotate. The Carry and the state of the overflow-flag depend on the state of bit 6 and 7 before the rotate occurs, but after the and-operation has happened, and will be set like shown in the following table:
+          <br>
+          <table class="text-table">
+            <thead>
+              <tr>
+                <th>Bit 7</th>
+                <th>Bit 6</th>
+                <th>Carry</th>
+                <th>Overflow</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+              </tr>
+              <tr>
+                <td>0</td>
+                <td>1</td>
+                <td>0</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>0</td>
+                <td>1</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+                <td>0</td>
+              </tr>
+            </tbody>
+            </table>
         </p>
-
-        <div class="codeblock">
-          <pre>
-      <span style="color: #eeeb42; font-weight: bold">ins</span><span style="color: #87daf3"> $FF</span><span style="color: #83f383;">         // E7 FF</span>
-          </pre>
-        </div>
 
         <p>
-          Here is the same code using equivalent instructions.
+          Here is an example of how you might use this opcode:
         </p>
+      </div>
 
         <div class="codeblock">
           <pre>
-      <span style="color: #eeeb42; font-weight: bold">inc</span><span style="color: #87daf3"> $FF</span></span>
-      <span style="color: #eeeb42; font-weight: bold">sbc</span><span style="color: #87daf3"> $FF</span></span>
+    <span style="color: #eeeb42; font-weight: bold">arr</span><span style="color: salmon;"> #</span><span style="color: #87daf3">$7F</span><span style="color: #83f383;">         // 6B 7F</span>
           </pre>
         </div>
 
