--- a/src/html/isc.html
+++ b/src/html/isc.html
@@ -18,7 +18,7 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>ISC (ISB INS)</h1>
+          <h1>ISC - ISB - INS</h1>
           <h2 style="text-align:center;">INC memory then subtract memory from accumulator (with borrow)</h2>
           <h2 style="text-align:center;">(Sub-instructions: SBC, INC)</h2>
         </div>
@@ -123,23 +123,30 @@
 
       <div class="opcode-text">
         <p>
-          Here is an example of how you might use this opcode:
+          This opcode INCs the contents of a memory location and then SBCs the result from the A register.
         </p>
 
-        <div class="codeblock">
-          <pre>
-      <span style="color: #eeeb42; font-weight: bold">isc</span><span style="color: #87daf3"> $FF</span><span style="color: #83f383;">         // E7 FF</span>
-          </pre>
-        </div>
+        <p>
+          Here is an example of how you might use this opcode:
+        </p>
+      </div>
 
+      <div class="codeblock">
+        <pre>
+    <span style="color: #eeeb42; font-weight: bold">isc</span><span style="color: #87daf3"> $FF</span><span style="color: #83f383;">         // E7 FF</span>
+        </pre>
+      </div>
+
+      <div class="opcode-text">
         <p>
           Here is the same code using equivalent instructions.
         </p>
+      </div>
 
         <div class="codeblock">
           <pre>
-      <span style="color: #eeeb42; font-weight: bold">inc</span><span style="color: #87daf3"> $FF</span></span>
-      <span style="color: #eeeb42; font-weight: bold">sbc</span><span style="color: #87daf3"> $FF</span></span>
+    <span style="color: #eeeb42; font-weight: bold">inc</span><span style="color: #87daf3"> $FF</span></span>
+    <span style="color: #eeeb42; font-weight: bold">sbc</span><span style="color: #87daf3"> $FF</span></span>
           </pre>
         </div>
 
