--- a/src/html/las.html
+++ b/src/html/las.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>AXS (SAX AAX)</h1>
-          <h2 style="text-align:center;">AND the contents of the A and X registers</h2>
-          <h2 style="text-align:center;">Sub-instructions: STA, STX</h2>
+          <h1>LAS - LAR</h1>
+          <h2 style="text-align:center;">AND memory with stack pointer transfer result to accumulator</h2>
+          <h2 style="text-align:center;">M AND SP -> A, X, SP</h2>
         </div>
       </div>
 
@@ -44,32 +44,12 @@
             </th>
           </tr>
           <tr>
-            <td>Zero Page</td>
-            <td>AXS $44</td>
-            <td>$87</td>
-            <td>2</td>
+          <tr>
+            <td>Absolute,Y</td>
+            <td>LAS $4400,Y</td>
+            <td>$BB</td>
             <td>3</td>
-          </tr>
-          <tr>
-            <td>Zero Page,Y</td>
-            <td>AXS $44,Y</td>
-            <td>$97</td>
-            <td>2</td>
-            <td>4</td>
-          </tr>
-          <tr>
-            <td>(Indirect,X)</td>
-            <td>AXS ($44,X)</td>
-            <td>$83</td>
-            <td>2</td>
-            <td>6</td>
-          </tr>
-          <tr>
-            <td>Absolute</td>
-            <td>AXS $4400</td>
-            <td>$8F</td>
-            <td>3</td>
-            <td>4</td>
+            <td>4+</td>
           </tr>
           <tr>
             <th colspan=5>
@@ -85,13 +65,13 @@
                   <td>C</td>
                 </tr>
                 <tr>
+                  <td>&#10003;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
+                  <td>&#10003;</td>
                   <td>&nbsp;</td>
                 </tr>
               </table>
@@ -102,28 +82,15 @@
 
       <div class="opcode-text">
         <p>
-          Here is an example of how you might use this opcode:
+          This opcode ANDs the contents of a memory location with the contents of the stack pointer register and stores the result in the accumulator, the X register, and the stack pointer.
         </p>
+      </div>
 
-        <div class="codeblock">
-          <pre>
-      <span style="color: #eeeb42; font-weight: bold">axs</span><span style="color: #87daf3"> $FE</span><span style="color: #83f383;">         // 87 FE</span>
-          </pre>
-        </div>
-
-        <p>
-          Here is the same code using equivalent instructions.
-        </p>
-
-        <div class="codeblock">
-          <pre>
-      <span style="color: #eeeb42; font-weight: bold">stx</span><span style="color: #87daf3"> $FE</span></span>
-      <span style="color: #eeeb42; font-weight: bold">pha</span>
-      <span style="color: #eeeb42; font-weight: bold">and</span><span style="color: #87daf3"> $FE</span></span>
-      <span style="color: #eeeb42; font-weight: bold">sta</span><span style="color: #87daf3"> $FE</span></span>
-      <span style="color: #eeeb42; font-weight: bold">pla</span>
-          </pre>
-        </div>
+      <div class="codeblock">
+        <pre>
+    <span style="color: #eeeb42; font-weight: bold">las</span><span style="color: #87daf3"> $C000,Y</span><span style="color: #83f383;">         // BB AA</span>
+        </pre>
+      </div>
 
       <div id="navigation">
         <h2>Navigation:</h2>
