--- a/src/html/rra.html
+++ b/src/html/rra.html
@@ -123,23 +123,30 @@
 
       <div class="opcode-text">
         <p>
-          Here is an example of how you might use this opcode:
+          RRA RORs the contents of a memory location and then ADCs the result with the accumulator.
         </p>
 
-        <div class="codeblock">
-          <pre>
-      <span style="color: #eeeb42; font-weight: bold">rra</span><span style="color: #87daf3"> $030C,X</span><span style="color: #83f383;">         // 6F 0C 03</span>
-          </pre>
-        </div>
+        <p>
+          Here is an example of how you might use this opcode:
+        </p>
+      </div>
 
+      <div class="codeblock">
+        <pre>
+    <span style="color: #eeeb42; font-weight: bold">rra</span><span style="color: #87daf3"> $030C,X</span><span style="color: #83f383;">         // 6F 0C 03</span>
+        </pre>
+      </div>
+
+      <div class="opcode-text">
         <p>
           Here is the same code using equivalent instructions.
         </p>
+      </div>
 
         <div class="codeblock">
           <pre>
-      <span style="color: #eeeb42; font-weight: bold">ror</span><span style="color: #87daf3"> $030C,X</span></span>
-      <span style="color: #eeeb42; font-weight: bold">adc</span><span style="color: #87daf3"> $030C,X</span></span>
+    <span style="color: #eeeb42; font-weight: bold">ror</span><span style="color: #87daf3"> $030C,X</span></span>
+    <span style="color: #eeeb42; font-weight: bold">adc</span><span style="color: #87daf3"> $030C,X</span></span>
           </pre>
         </div>
 
