--- a/src/html/sax.html
+++ b/src/html/sax.html
@@ -18,7 +18,7 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>SAX (AXS AAX)</h1>
+          <h1>SAX - AXS - AAX</h1>
           <h2 style="text-align:center;">AND the contents of the A and X registers</h2>
           <h2 style="text-align:center;">Sub-instructions: STA, STX</h2>
         </div>
@@ -102,18 +102,25 @@
 
       <div class="opcode-text">
         <p>
-          Here is an example of how you might use this opcode:
+          AXS ANDs the contents of the A and X registers (without changing the contents of either register) and stores the result in memory. AXS does not affect any flags in the processor status register.
         </p>
 
-        <div class="codeblock">
-          <pre>
-      <span style="color: #eeeb42; font-weight: bold">sax</span><span style="color: #87daf3"> $FE</span><span style="color: #83f383;">         // 87 FE</span>
-          </pre>
-        </div>
+        <p>
+          Here is an example of how you might use this opcode:
+        </p>
+      </div>
 
+      <div class="codeblock">
+        <pre>
+    <span style="color: #eeeb42; font-weight: bold">sax</span><span style="color: #87daf3"> $FE</span><span style="color: #83f383;">         // 87 FE</span>
+        </pre>
+      </div>
+
+      <div class="opcode-text">
         <p>
           Here is the same code using equivalent instructions.
         </p>
+      </div>
 
         <div class="codeblock">
           <pre>
