--- a/src/html/sbx.html
+++ b/src/html/sbx.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>LSE (SRE)</h1>
-          <h2 style="text-align:center;">Shift right one bit in memory then EOR accumulator with memory</h2>
-          <h2 style="text-align:center;">Sub-instructions: EOR, LSR</h2>
+          <h1>SBX</h1>
+          <h2 style="text-align:center;">CMP and DEX at once, sets flags like CMP</h2>
+          <h2 style="text-align:center;">(A AND X) - oper -> X</h2>
         </div>
       </div>
 
@@ -44,53 +44,12 @@
             </th>
           </tr>
           <tr>
-            <td>Zero Page</td>
-            <td>LSE $44</td>
-            <td>$47</td>
+          <tr>
+            <td>Immediate</td>
+            <td>SBX #$AB</td>
+            <td>$CB</td>
             <td>2</td>
-            <td>5</td>
-          </tr>
-          <tr>
-            <td>Zero Page,X</td>
-            <td>LSE $44,X</td>
-            <td>$57</td>
             <td>2</td>
-            <td>6</td>
-          </tr>
-          <tr>
-            <td>(Indirect,X)</td>
-            <td>LSE ($44,X)</td>
-            <td>$43</td>
-            <td>2</td>
-            <td>8</td>
-          </tr>
-          <tr>
-            <td>(Indirect),Y</td>
-            <td>LSE ($44),Y</td>
-            <td>$53</td>
-            <td>2</td>
-            <td>8</td>
-          </tr>
-          <tr>
-            <td>Absolute</td>
-            <td>LSE $4400</td>
-            <td>$4F</td>
-            <td>3</td>
-            <td>6</td>
-          </tr>
-          <tr>
-            <td>Absolute,X</td>
-            <td>LSE $4400,X</td>
-            <td>$5F</td>
-            <td>3</td>
-            <td>7</td>
-          </tr>
-          <tr>
-            <td>Absolute,Y</td>
-            <td>LSE $4400,Y</td>
-            <td>$5B</td>
-            <td>3</td>
-            <td>7</td>
           </tr>
           <tr>
             <th colspan=5>
@@ -123,23 +82,17 @@
 
       <div class="opcode-text">
         <p>
-          Here is an example of how you might use this opcode:
+          SBX ANDs the contents of the A and X registers (leaving the contents of A intact), subtracts an immediate value, and then stores the result in X. ... A few points might be made about the action of subtracting an immediate value. It actually works just like the CMP instruction, except that CMP does not store the result of the subtraction it performs in any register. This subtract operation is not affected by the state of the Carry flag, though it does affect the Carry flag. It does not affect the Overflow flag. (Flags are set like with CMP, not SBC)
         </p>
-
-        <div class="codeblock">
-          <pre>
-      <span style="color: #eeeb42; font-weight: bold">lse</span><span style="color: #87daf3"> $C100,X</span><span style="color: #83f383;">         // 5F 00 C1</span>
-          </pre>
-        </div>
 
         <p>
-          Here is the same code using equivalent instructions.
+          Another property of this opcode is that it doesn't respect the decimal mode, since it is derived from CMP rather than SBC. So if you need to perform table lookups and arithmetic in a tight interrupt routine there's no need to clear the decimal flag in case you've got some code running that operates in decimal mode.
         </p>
+      </div>
 
         <div class="codeblock">
           <pre>
-      <span style="color: #eeeb42; font-weight: bold">lsr</span><span style="color: #87daf3"> $C100,X</span></span>
-      <span style="color: #eeeb42; font-weight: bold">eor</span><span style="color: #87daf3"> $C100,X</span></span>
+    <span style="color: #eeeb42; font-weight: bold">sbx</span><span style="color: salmon;"> #</span><span style="color: #87daf3">$5A</span><span style="color: #83f383;">         // CB 5A</span>
           </pre>
         </div>
 
