--- a/src/html/slo.html
+++ b/src/html/slo.html
@@ -18,7 +18,7 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>SLO (ASO)</h1>
+          <h1>SLO - ASO</h1>
           <h2 style="text-align:center;">Shift left one bit in memory then OR accumulator with memory</h2>
           <h2 style="text-align:center;">Sub-instructions: ORA, ASL</h2>
         </div>
@@ -123,25 +123,32 @@
 
       <div class="opcode-text">
         <p>
-          Here is an example of how you might use this opcode:
+          This opcode ASLs the contents of a memory location and then ORs the result with the accumulator.
         </p>
 
-        <div class="codeblock">
-          <pre>
-      <span style="color: #eeeb42; font-weight: bold">slo</span><span style="color: #87daf3"> $C010</span><span style="color: #83f383;">         // 0F 10 C0</span>
-          </pre>
-        </div>
+        <p>
+          Here is an example of how you might use this opcode:
+        </p>
+      </div>
 
+      <div class="codeblock">
+        <pre>
+    <span style="color: #eeeb42; font-weight: bold">slo</span><span style="color: #87daf3"> $C010</span><span style="color: #83f383;">         // 0F 10 C0</span>
+        </pre>
+      </div>
+
+      <div class="opcode-text">
         <p>
           Here is the same code using equivalent instructions.
         </p>
+      </div>
 
-        <div class="codeblock">
-          <pre>
-      <span style="color: #eeeb42; font-weight: bold">asl</span><span style="color: #87daf3"> $C010</span></span>
-      <span style="color: #eeeb42; font-weight: bold">ora</span><span style="color: #87daf3"> $C010</span></span>
-          </pre>
-        </div>
+      <div class="codeblock">
+        <pre>
+    <span style="color: #eeeb42; font-weight: bold">asl</span><span style="color: #87daf3"> $C010</span></span>
+    <span style="color: #eeeb42; font-weight: bold">ora</span><span style="color: #87daf3"> $C010</span></span>
+        </pre>
+      </div>
 
       <div id="navigation">
         <h2>Navigation:</h2>
