--- a/src/html/sre.html
+++ b/src/html/sre.html
@@ -18,7 +18,7 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>SRE (LSE)</h1>
+          <h1>SRE - LSE</h1>
           <h2 style="text-align:center;">Shift right one bit in memory then EOR accumulator with memory</h2>
           <h2 style="text-align:center;">Sub-instructions: EOR, LSR</h2>
         </div>
@@ -123,18 +123,25 @@
 
       <div class="opcode-text">
         <p>
-          Here is an example of how you might use this opcode:
+          LSE LSRs the contents of a memory location and then EORs the result with the accumulator.
         </p>
 
-        <div class="codeblock">
-          <pre>
-      <span style="color: #eeeb42; font-weight: bold">sre</span><span style="color: #87daf3"> $C100,X</span><span style="color: #83f383;">         // 5F 00 C1</span>
-          </pre>
-        </div>
+        <p>
+          Here is an example of how you might use this opcode:
+        </p>
+      </div>
 
+      <div class="codeblock">
+        <pre>
+    <span style="color: #eeeb42; font-weight: bold">sre</span><span style="color: #87daf3"> $C100,X</span><span style="color: #83f383;">         // 5F 00 C1</span>
+        </pre>
+      </div>
+
+      <div class="opcode-text">
         <p>
           Here is the same code using equivalent instructions.
         </p>
+      </div>
 
         <div class="codeblock">
           <pre>
