--- a/src/html/usbc.html
+++ b/src/html/usbc.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>DCM (DCP)</h1>
-          <h2 style="text-align:center;">DECs a memory location then CMPs the result with the Accumulator</h2>
-          <h2 style="text-align:center;">Sub-instructions: CMP, DEC</h2>
+          <h1>USBC - SBC2</h1>
+          <h2 style="text-align:center;">Effectively same as normal SBC immediate, instr. E9</h2>
+          <h2 style="text-align:center;">(Sub-instructions: SBC, NOP)</h2>
         </div>
       </div>
 
@@ -44,53 +44,12 @@
             </th>
           </tr>
           <tr>
-            <td>Zero Page</td>
-            <td>DCM $44</td>
-            <td>$C7</td>
+          <tr>
+            <td>Immediate</td>
+            <td>USBC #$AB</td>
+            <td>$EB</td>
             <td>2</td>
-            <td>5</td>
-          </tr>
-          <tr>
-            <td>Zero Page,X</td>
-            <td>DCM $44,X</td>
-            <td>$D7</td>
             <td>2</td>
-            <td>6</td>
-          </tr>
-          <tr>
-            <td>(Indirect,X)</td>
-            <td>DCM ($44,X)</td>
-            <td>$C3</td>
-            <td>2</td>
-            <td>8</td>
-          </tr>
-          <tr>
-            <td>(Indirect),Y</td>
-            <td>DCM ($44),Y</td>
-            <td>$D3</td>
-            <td>2</td>
-            <td>8</td>
-          </tr>
-          <tr>
-            <td>Absolute</td>
-            <td>DCM $4400</td>
-            <td>$CF</td>
-            <td>3</td>
-            <td>6</td>
-          </tr>
-          <tr>
-            <td>Absolute,X</td>
-            <td>DCM $4400,X</td>
-            <td>$DF</td>
-            <td>3</td>
-            <td>7</td>
-          </tr>
-          <tr>
-            <td>Absolute,Y</td>
-            <td>DCM $4400,Y</td>
-            <td>$DB</td>
-            <td>3</td>
-            <td>7</td>
           </tr>
           <tr>
             <th colspan=5>
@@ -107,7 +66,7 @@
                 </tr>
                 <tr>
                   <td>&#10003;</td>
-                  <td>&nbsp;</td>
+                  <td>&#10003;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
@@ -123,25 +82,15 @@
 
       <div class="opcode-text">
         <p>
-          Here is an example of how you might use this opcode:
+          Subtract immediate value from accumulator with carry. Same as the regular SBC.
         </p>
+      </div>
 
-        <div class="codeblock">
-          <pre>
-      <span style="color: #eeeb42; font-weight: bold">dcm</span><span style="color: #87daf3"> $FF</span><span style="color: #83f383;">         // C7 FF</span>
-          </pre>
-        </div>
-
-        <p>
-          Here is the same code using equivalent instructions.
-        </p>
-
-        <div class="codeblock">
-          <pre>
-      <span style="color: #eeeb42; font-weight: bold">dec</span><span style="color: #87daf3"> $FF</span></span>
-      <span style="color: #eeeb42; font-weight: bold">cmp</span><span style="color: #87daf3"> $FF</span></span>
-          </pre>
-        </div>
+      <div class="codeblock">
+        <pre>
+    <span style="color: #eeeb42; font-weight: bold">usbc</span><span style="color: salmon;"> #</span><span style="color: #87daf3">$5A</span><span style="color: #83f383;">         // EB 5A</span>
+        </pre>
+      </div>
 
       <div id="navigation">
         <h2>Navigation:</h2>
