--- a/src/html/ane.html
+++ b/src/html/ane.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>ANE - XAA</h1>
-          <h2 style="text-align:center;">AND X + AND operand</h2>
-          <h2 style="text-align:center;">Is chip- and/or temperature dependent</h2>
+          <h1>ANE (XAA)</h1>
+          <h2>AND X + AND operand</h2>
+          <h2>Is chip- and/or temperature dependent</h2>
         </div>
       </div>
 
@@ -96,8 +96,7 @@
 
         <div class="codeblock">
           <pre>
-    <span style="color: #eeeb42; font-weight: bold">ane</span><span style="color: salmon;"> #</span><span style="color: #87daf3">$44</span><span style="color: #83f383;">         // 8B 44 or</span>
-    <span style="color: #eeeb42; font-weight: bold">xaa</span><span style="color: salmon;"> #</span><span style="color: #87daf3">$44</span><span style="color: #83f383;">         // 8B 44</span>
+    <span style="color: #eeeb42; font-weight: bold">ane</span><span style="color: salmon;"> #</span><span style="color: #87daf3">$44</span><span style="color: #83f383;">         // 8B 44</span>
           </pre>
         </div>
 
