--- a/src/html/alr.html
+++ b/src/html/alr.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>ALR - ASR</h1>
-          <h2 style="text-align:center;">AND the A register with an immediate value then LSRs the result</h2>
-          <h2 style="text-align:center;">(Sub-instructions: AND, LSR)</h2>
+          <h1>ALR (ASR)</h1>
+          <h2>AND the A register with an immediate value then LSRs the result</h2>
+          <h2>(Sub-instructions: AND, LSR)</h2>
         </div>
       </div>
 
