--- a/src/html/arr.html
+++ b/src/html/arr.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>ARR</h1>
-          <h2 style="text-align:center;">ANDs the A register with an immediate value then RORs the result</h2>
-          <h2 style="text-align:center;">(Sub-instructions: AND, ROR)</h2>
+          <h2>ANDs the A register with an immediate value then RORs the result</h2>
+          <h2>(Sub-instructions: AND, ROR)</h2>
         </div>
       </div>
 
