--- a/src/html/dcp.html
+++ b/src/html/dcp.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>DCP - DCM</h1>
-          <h2 style="text-align:center;">DECs a memory location then CMPs the result with the Accumulator</h2>
-          <h2 style="text-align:center;">Sub-instructions: CMP, DEC</h2>
+          <h1>DCP (DCM)</h1>
+          <h2>DECs a memory location then CMPs the result with the Accumulator</h2>
+          <h2>Sub-instructions: CMP, DEC</h2>
         </div>
       </div>
 
