--- a/src/html/illegalnop.html
+++ b/src/html/illegalnop.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>Illegal NOP's</h1>
-          <h2 style="text-align:center;">NOP performs no operation</h2>
-          <h2 style="text-align:center;">Operands are ignored</h2>
+          <h2>NOP performs no operation</h2>
+          <h2>Operands are ignored</h2>
         </div>
       </div>
 
