--- a/src/html/isc.html
+++ b/src/html/isc.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>ISC - ISB - INS</h1>
-          <h2 style="text-align:center;">INC memory then subtract memory from accumulator (with borrow)</h2>
-          <h2 style="text-align:center;">(Sub-instructions: SBC, INC)</h2>
+          <h1>ISC (ISB INS)</h1>
+          <h2>INC memory then subtract memory from accumulator (with borrow)</h2>
+          <h2>(Sub-instructions: SBC, INC)</h2>
         </div>
       </div>
 
