--- a/src/html/jam.html
+++ b/src/html/jam.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>JAM - KIL - HLT</h1>
-          <h2 style="text-align:center;">These instructions freeze the CPU</h2>
-          <h2 style="text-align:center;">Only a reset will restart execution</h2>
+          <h1>JAM (KIL HLT)</h1>
+          <h2>These instructions freeze the CPU</h2>
+          <h2>Only a reset will restart execution</h2>
         </div>
       </div>
 
