--- a/src/html/las.html
+++ b/src/html/las.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>LAS - LAR</h1>
-          <h2 style="text-align:center;">AND memory with stack pointer transfer result to accumulator</h2>
-          <h2 style="text-align:center;">M AND SP -> A, X, SP</h2>
+          <h1>LAS (LAR LAE)</h1>
+          <h2>AND memory with stack pointer transfer result to accumulator</h2>
+          <h2>M AND SP -> A, X, SP</h2>
         </div>
       </div>
 
