--- a/src/html/lax.html
+++ b/src/html/lax.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>LAX</h1>
-          <h2 style="text-align:center;">Load the accumulator and X register with contents of a memory location</h2>
-          <h2 style="text-align:center;">Sub-instructions: LDA, LDX</h2>
+          <h2>Load the accumulator and X register with contents of a memory location</h2>
+          <h2>Sub-instructions: LDA, LDX</h2>
         </div>
       </div>
 
@@ -150,6 +150,7 @@
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="See Also LXA (LAX Immediate)" class="button buttonNAVIGATION" onclick="cmdLXA()">See Also LXA (LAX Immediate)</button>
         <button title="View List of All Illegal C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdILLEGAL()">View All Illegal Opcodes List</button>
       </div>
     </div>
