--- a/src/html/lxa.html
+++ b/src/html/lxa.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>LAX (LAX immediate)</h1>
-          <h2 style="text-align:center;">Store * AND oper in A and X</h2>
-          <h2 style="text-align:center;">(A OR CONST) AND oper -> A -> X</h2>
+          <h1>LXA (LAX immediate)</h1>
+          <h2>Store * AND oper in A and X</h2>
+          <h2>(A OR CONST) AND oper -> A -> X</h2>
         </div>
       </div>
 
@@ -100,6 +100,7 @@
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="See Also LAX" class="button buttonNAVIGATION" onclick="cmdLAX()">See Also LAX</button>
         <button title="View List of All Illegal C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdILLEGAL()">View All Illegal Opcodes List</button>
       </div>
     </div>
