--- a/src/html/rla.html
+++ b/src/html/rla.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>RLA</h1>
-          <h2 style="text-align:center;">Rotate one bit left in memory then AND accumulator with memory</h2>
-          <h2 style="text-align:center;">Sub-instructions: AND, ROL</h2>
+          <h2>Rotate one bit left in memory then AND accumulator with memory</h2>
+          <h2>Sub-instructions: AND, ROL</h2>
         </div>
       </div>
 
