--- a/src/html/sax.html
+++ b/src/html/sax.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>SAX - AXS - AAX</h1>
-          <h2 style="text-align:center;">AND the contents of the A and X registers</h2>
-          <h2 style="text-align:center;">Sub-instructions: STA, STX</h2>
+          <h1>SAX (AXS AAX)</h1>
+          <h2>AND the contents of the A and X registers</h2>
+          <h2>Sub-instructions: STA, STX</h2>
         </div>
       </div>
 
