--- a/src/html/sbx.html
+++ b/src/html/sbx.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>SBX</h1>
-          <h2 style="text-align:center;">CMP and DEX at once, sets flags like CMP</h2>
-          <h2 style="text-align:center;">(A AND X) - oper -> X</h2>
+          <h2>CMP and DEX at once, sets flags like CMP</h2>
+          <h2>(A AND X) - oper -> X</h2>
         </div>
       </div>
 
