--- a/src/html/sha.html
+++ b/src/html/sha.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>SHA - AHX - AXA</h1>
-          <h2 style="text-align:center;">Stores A AND X AND (high-byte of addr. + 1) at addr</h2>
-          <h2 style="text-align:center;">Combinations of STA/STX/STY</h2>
+          <h1>SHA (AXA AHX)</h1>
+          <h2>Stores A AND X AND (high-byte of addr. + 1) at addr</h2>
+          <h2>Combinations of STA/STX/STY</h2>
         </div>
       </div>
 
