--- a/src/html/shx.html
+++ b/src/html/shx.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>SHX - SXA - XAS</h1>
-          <h2 style="text-align:center;">Stores X AND (high-byte of addr. + 1) at addr</h2>
-          <h2 style="text-align:center;">X AND (H+1) -> M</h2>
+          <h1>SHX (A11 SXA XAS)</h1>
+          <h2>Stores X AND (high-byte of addr. + 1) at addr</h2>
+          <h2>X AND (H+1) -> M</h2>
         </div>
       </div>
 
