--- a/src/html/shy.html
+++ b/src/html/shy.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>SHY - SYA - SAY</h1>
-          <h2 style="text-align:center;">Stores Y AND (high-byte of addr. + 1) at addr</h2>
-          <h2 style="text-align:center;">Y AND (H+1) -> M</h2>
+          <h1>SHY (A11 SYA SAY)</h1>
+          <h2>Stores Y AND (high-byte of addr. + 1) at addr</h2>
+          <h2>Y AND (H+1) -> M</h2>
         </div>
       </div>
 
