--- a/src/html/slo.html
+++ b/src/html/slo.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>SLO - ASO</h1>
-          <h2 style="text-align:center;">Shift left one bit in memory then OR accumulator with memory</h2>
-          <h2 style="text-align:center;">Sub-instructions: ORA, ASL</h2>
+          <h1>SLO (ASO)</h1>
+          <h2>Shift left one bit in memory then OR accumulator with memory</h2>
+          <h2>Sub-instructions: ORA, ASL</h2>
         </div>
       </div>
 
