--- a/src/html/tas.html
+++ b/src/html/tas.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>TAS - SHS</h1>
-          <h3 style="text-align:center;">Puts A AND X in SP and stores<br>A AND X AND (high-byte of addr. + 1) at addr.</h3>
-          <h3 style="text-align:center;">A AND X -> SP, A AND X AND (H+1) -> M</h3>
+          <h1>TAS (SHS)</h1>
+          <h3>Puts A AND X in SP and stores<br>A AND X AND (high-byte of addr. + 1) at addr.</h3>
+          <h3>A AND X -> SP, A AND X AND (H+1) -> M</h3>
         </div>
       </div>
 
