--- a/src/html/template.html
+++ b/src/html/template.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>OPCODE</h1>
-          <h2 style="text-align:center;">Description</h2>
-          <h2 style="text-align:center;">Operation:</h2>
+          <h2>Description</h2>
+          <h2>Operation:</h2>
         </div>
       </div>
 
