--- a/src/html/usbc.html
+++ b/src/html/usbc.html
@@ -18,9 +18,9 @@
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
-          <h1>USBC - SBC2</h1>
-          <h2 style="text-align:center;">Effectively same as normal SBC immediate, instr. E9</h2>
-          <h2 style="text-align:center;">(Sub-instructions: SBC, NOP)</h2>
+          <h1>USBC (SBC2 SBC)</h1>
+          <h2>Effectively same as normal SBC immediate, instr. E9</h2>
+          <h2>(Sub-instructions: SBC, NOP)</h2>
         </div>
       </div>
 
