--- a/src/html/ane.html
+++ b/src/html/ane.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>ANE (XAA)</h1>
-          <h2>AND X + AND operand</h2>
-          <h2>Is chip- and/or temperature dependent</h2>
+          <h2>* AND X + AND oper</h2>
+          <h2>(A OR CONST) AND X AND oper -> A</h2>
         </div>
       </div>
 
