--- a/src/html/index.html
+++ b/src/html/index.html
@@ -61,6 +61,12 @@
         <p>Also the website <a href="https://www.c64-wiki.com/wiki/Opcode">www.c64-wiki.com</a> for reference.</p>
 
         <p>The C64 Font created by <a href="http://www.DevinCook.com">Devin D. Cook</a> used optionally in the Webviews.</p>
+
+        <p>Illegal Opcode reference <a href="https://www.masswerk.at/nowgobang/2021/6502-illegal-opcodes">6502 “Illegal” Opcodes Demystified</a>.</p>
+
+        <p>Illegal Opcode reference <a href="https://www.masswerk.at/6502/6502_instruction_set.html">6502 Instruction Set</a>.</p>
+
+        <p>Illegal Opcode reference <a href="http://hitmen.c02.at/files/docs/c64/NoMoreSecrets-NMOS6510UnintendedOpcodes-20162412.pdf">NMOS 6510 Unintended Opcodes (No More Secrets)</a>.</p>
         <br>
         <h4>I hope you enjoy this extension!</h4>
         <h4>William McKeever</h4>
