--- a/src/html/sax.html
+++ b/src/html/sax.html
@@ -20,7 +20,7 @@
         <div id="header-text">
           <h1>SAX (AXS AAX)</h1>
           <h2>AND the contents of the A and X registers</h2>
-          <h2>Sub-instructions: STA, STX</h2>
+          <h2>A AND X -> M</h2>
         </div>
       </div>
 
