--- a/src/html/sha.html
+++ b/src/html/sha.html
@@ -20,7 +20,7 @@
         <div id="header-text">
           <h1>SHA (AXA AHX)</h1>
           <h2>Stores A AND X AND (high-byte of addr. + 1) at addr</h2>
-          <h2>Combinations of STA/STX/STY</h2>
+          <h2>A AND X AND (H+1) -> M</h2>
         </div>
       </div>
 
