--- a/src/html/alr.html
+++ b/src/html/alr.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>ALR (ASR)</h1>
-          <h2>AND the A register with an immediate value then LSRs the result</h2>
-          <h2>(Sub-instructions: AND, LSR)</h2>
+          <h2>AND oper + LSR</h2>
+          <h2>A AND oper, 0 -> [76543210] -> C</h2>
         </div>
       </div>
 
