--- a/src/html/anc2.html
+++ b/src/html/anc2.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>ANC2</h1>
-          <h2>ANDs the contents of the A register with an immediate value</h2>
-          <h2>(Sub-instructions: AND, ROL)</h2>
+          <h2>AND oper + set C as ROL</h2>
+          <h2>A AND oper, bit(7) -> C</h2>
         </div>
       </div>
 
