--- a/src/html/dcp.html
+++ b/src/html/dcp.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>DCP (DCM)</h1>
-          <h2>DECs a memory location then CMPs the result with the Accumulator</h2>
-          <h2>Sub-instructions: CMP, DEC</h2>
+          <h2>DEC oper + CMP oper</h2>
+          <h2>M - 1 -> M, A - M</h2>
         </div>
       </div>
 
