--- a/src/html/isc.html
+++ b/src/html/isc.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>ISC (ISB INS)</h1>
-          <h2>INC memory then subtract memory from accumulator (with borrow)</h2>
-          <h2>(Sub-instructions: SBC, INC)</h2>
+          <h2>INC oper + SBC oper</h2>
+          <h2>M + 1 -> M, A - M - C -> A</h2>
         </div>
       </div>
 
