--- a/src/html/lax.html
+++ b/src/html/lax.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>LAX</h1>
-          <h2>Load the accumulator and X register with contents of a memory location</h2>
-          <h2>Sub-instructions: LDA, LDX</h2>
+          <h2>LDA oper + LDX oper</h2>
+          <h2>M -> A -> X</h2>
         </div>
       </div>
 
