--- a/src/html/rra.html
+++ b/src/html/rra.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>RRA</h1>
-          <h2>Rotate one bit right in memory then add mem to accumulator with carry</h2>
-          <h2>Sub-instructions: ADC, ROR</h2>
+          <h2>ROR oper + ADC oper</h2>
+          <h2>M = C -> [76543210] -> C, A + M + C -> A, C</h2>
         </div>
       </div>
 
