--- a/src/html/slo.html
+++ b/src/html/slo.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>SLO (ASO)</h1>
-          <h2>Shift left one bit in memory then OR accumulator with memory</h2>
-          <h2>Sub-instructions: ORA, ASL</h2>
+          <h2>ASL oper + ORA oper</h2>
+          <h2>M = C <- [76543210] <- 0, A OR M -> A</h2>
         </div>
       </div>
 
