--- a/src/html/sre.html
+++ b/src/html/sre.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>SRE (LSE)</h1>
-          <h2>Shift right one bit in memory then EOR accumulator with memory</h2>
-          <h2>Sub-instructions: EOR, LSR</h2>
+          <h2>LSR oper + EOR oper</h2>
+          <h2>M = 0 -> [76543210] -> C, A EOR M -> A</h2>
         </div>
       </div>
 
