--- a/src/html/usbc.html
+++ b/src/html/usbc.html
@@ -19,8 +19,8 @@
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <div id="header-text">
           <h1>USBC (SBC2 SBC)</h1>
-          <h2>Effectively same as normal SBC immediate, instr. E9</h2>
-          <h2>(Sub-instructions: SBC, NOP)</h2>
+          <h2>SBC oper + NOP</h2>
+          <h2>A - M - C -> A</h2>
         </div>
       </div>
 
